[HistoryView][Graph] Specify width explicitly to fix overflow elements from modal dialog

--- a/client/static/css/hatohol.css
+++ b/client/static/css/hatohol.css
@@ -298,6 +298,10 @@ h2.hatohol-graph {
     margin-bottom: 3.6em;
 }
 
+#hatohol-graph-item .form-control {
+    width: 100%;
+}
+
 #hatohol-item-list label {
     font-size: 18px;
     margin-right: 0.5em;
